--- a/templates/catalog/components/cart/cart-item-row.html.twig
+++ b/templates/catalog/components/cart/cart-item-row.html.twig
@@ -1,6 +1,6 @@
 {# ai:component=cart-item-row map=@component_cart-item-row_map.mdc v=1 #}
 <tr class="border-b" data-item-id="{{ item.id }}" data-testid="cart-item">
-  <td class="py-2 pr-4">
+  <td class="td-cell">
     {% if item.product and item.product.image|length > 0 %}
       {% set firstImage = item.product.image|sort((a,b) => a.sortOrder <=> b.sortOrder)|first %}
       {% if firstImage %}
@@ -13,14 +13,14 @@
         {% endif %}
         <img src="{{ imgSrc }}" alt="{{ item.productName }}" class="w-16 h-16 object-cover rounded border">
       {% else %}
-        <div class="w-16 h-16 bg-gray-200 rounded border flex items-center justify-center text-gray-500 text-xs">Нет фото</div>
+        {% component 'placeholder-thumb' %}{% endcomponent %}
       {% endif %}
     {% else %}
-      <div class="w-16 h-16 bg-gray-200 rounded border flex items-center justify-center text-gray-500 text-xs">Нет фото</div>
+      {% component 'placeholder-thumb' %}{% endcomponent %}
     {% endif %}
   </td>
 
-  <td class="py-2 pr-4">
+  <td class="td-cell">
     {% if item.product and item.product.slug %}
       <a href="{{ path('catalog_product_show', {'slug': item.product.slug}) }}" class="text-blue-600 hover:text-blue-800 hover:underline">
         {{ item.productName }}
@@ -42,7 +42,7 @@
     {% endif %}
   </td>
 
-  <td class="py-2 pr-4">
+  <td class="td-cell">
     {# Показываем цену со скидкой и без скидки (Simple/Variable) #}
     {% set discountedPrice = item.effectiveUnitPrice > 0 ? item.effectiveUnitPrice : item.unitPrice %}
     {% set hasOptions = item.optionAssignments is defined and item.optionAssignments|length > 0 %}
@@ -77,7 +77,7 @@
     {% endif %}
   </td>
 
-  <td class="py-2 pr-4">
+  <td class="td-cell">
     <input
       type="number"
       class="qty-input w-20 border rounded px-2 py-1"
@@ -88,9 +88,9 @@
     >
   </td>
 
-  <td class="py-2 pr-4 row-total" data-testid="row-total">{{ format_price(item.rowTotal) }}</td>
+  <td class="td-cell row-total" data-testid="row-total">{{ format_price(item.rowTotal) }}</td>
 
-  <td class="py-2 pr-4">
+  <td class="td-cell">
     <button class="remove text-red-600 hover:underline" data-item-id="{{ item.id }}" data-testid="remove">
       Удалить
     </button>
