--- a/templates/catalog/layouts/header.html.twig
+++ b/templates/catalog/layouts/header.html.twig
@@ -168,30 +168,30 @@
         <div class="mb-6">
           <h3 class="text-lg font-semibold text-gray-900 mb-3">Категории</h3>
           <ul class="space-y-2">
-            <li><a href="#" class="block py-2 text-gray-700 hover:text-blue-600">Женская одежда</a></li>
-            <li><a href="#" class="block py-2 text-gray-700 hover:text-blue-600">Мужская одежда</a></li>
-            <li><a href="#" class="block py-2 text-gray-700 hover:text-blue-600">Обувь</a></li>
-            <li><a href="#" class="block py-2 text-gray-700 hover:text-blue-600">Аксессуары</a></li>
-            <li><a href="#" class="block py-2 text-gray-700 hover:text-blue-600">Красота</a></li>
-            <li><a href="#" class="block py-2 text-gray-700 hover:text-blue-600">Детские товары</a></li>
+            <li><a href="#" class="nav-link">Женская одежда</a></li>
+            <li><a href="#" class="nav-link">Мужская одежда</a></li>
+            <li><a href="#" class="nav-link">Обувь</a></li>
+            <li><a href="#" class="nav-link">Аксессуары</a></li>
+            <li><a href="#" class="nav-link">Красота</a></li>
+            <li><a href="#" class="nav-link">Детские товары</a></li>
           </ul>
         </div>
         
         <div class="mb-6">
           <h3 class="text-lg font-semibold text-gray-900 mb-3">Страницы</h3>
           <ul class="space-y-2">
-            <li><a href="#" class="block py-2 text-gray-700 hover:text-blue-600">О нас</a></li>
-            <li><a href="#" class="block py-2 text-gray-700 hover:text-blue-600">Контакты</a></li>
-            <li><a href="#" class="block py-2 text-gray-700 hover:text-blue-600">Блог</a></li>
-            <li><a href="#" class="block py-2 text-gray-700 hover:text-blue-600">FAQ</a></li>
+            <li><a href="#" class="nav-link">О нас</a></li>
+            <li><a href="#" class="nav-link">Контакты</a></li>
+            <li><a href="#" class="nav-link">Блог</a></li>
+            <li><a href="#" class="nav-link">FAQ</a></li>
           </ul>
         </div>
         
         <div>
           <h3 class="text-lg font-semibold text-gray-900 mb-3">Аккаунт</h3>
           <ul class="space-y-2">
-            <li><a href="#" class="block py-2 text-gray-700 hover:text-blue-600">Войти</a></li>
-            <li><a href="#" class="block py-2 text-gray-700 hover:text-blue-600">Регистрация</a></li>
+            <li><a href="#" class="nav-link">Войти</a></li>
+            <li><a href="#" class="nav-link">Регистрация</a></li>
           </ul>
         </div>
       </div>
